--- a/rabbitmq-producer/build.gradle
+++ b/rabbitmq-producer/build.gradle
@@ -13,4 +13,5 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
 }
