UPDATE: JPA Specification

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ subprojects {
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
+        testImplementation 'org.junit.platform:junit-platform-commons:1.4.2'
     }
     
 }
