--- a/security-form-login/build.gradle
+++ b/security-form-login/build.gradle
@@ -12,4 +12,6 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 }
