DEPENDENCY: H2 데이터베이스 추가

--- a/security-form-login/build.gradle
+++ b/security-form-login/build.gradle
@@ -18,4 +18,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    runtimeOnly 'com.h2database:h2'
 }
