ADD, PROTOTYPE: 검색 쿼리 처리 1차 (비효율적)

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'jpa-specification'
 include 'mvc-request-param'
 include 'token-based-web-security'
 include 'security-form-login'
+include 'simple-mvc'
 
